{
  "version": 4,
  "terraform_version": "1.5.7",
  "serial": 47,
  "lineage": "75bcca89-5908-83ac-242d-e07d23acebcc",
  "resources": [
    {
      "module": "module.test_stack.module.db.module.db_accessor_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.test_stack.module.db.module.db_accessor_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:712023778557:security-group/sg-0d87f94feb586d008",
            "description": "For resources that need access to DB",
            "egress": [],
            "id": "sg-0d87f94feb586d008",
            "ingress": [],
            "name": "test-stack-db-accessor-2025042300262208060000000a",
            "name_prefix": "test-stack-db-accessor-",
            "owner_id": "712023778557",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-stack-db-accessor"
            },
            "tags_all": {
              "Name": "test-stack-db-accessor"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-08a6cfe215aa111d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.test_stack.module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.test_stack.module.db.module.db_accessor_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Egress Rule",
            "from_port": 5432,
            "id": "sgrule-3619442631",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0d87f94feb586d008",
            "security_group_rule_id": "sgr-0b5c4119aa3ccefa3",
            "self": false,
            "source_security_group_id": "sg-020314c863db902e1",
            "timeouts": null,
            "to_port": 5432,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.test_stack.module.db.module.db_accessor_security_group.aws_security_group.this",
            "module.test_stack.module.db.module.db_accessor_security_group.aws_security_group.this_name_prefix",
            "module.test_stack.module.db.module.db_security_group.aws_security_group.this",
            "module.test_stack.module.db.module.db_security_group.aws_security_group.this_name_prefix",
            "module.test_stack.module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.test_stack.module.db.module.db_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.test_stack.module.db.module.db_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:712023778557:security-group/sg-020314c863db902e1",
            "description": "For DB resources",
            "egress": [],
            "id": "sg-020314c863db902e1",
            "ingress": [],
            "name": "test-stack-db-2025042300262363030000000b",
            "name_prefix": "test-stack-db-",
            "owner_id": "712023778557",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-stack-db"
            },
            "tags_all": {
              "Name": "test-stack-db"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-08a6cfe215aa111d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.test_stack.module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.test_stack.module.db.module.db_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress Rule",
            "from_port": 5432,
            "id": "sgrule-1154694529",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-020314c863db902e1",
            "security_group_rule_id": "sgr-02144ce34846605a9",
            "self": false,
            "source_security_group_id": "sg-0d87f94feb586d008",
            "timeouts": null,
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.test_stack.module.db.module.db_accessor_security_group.aws_security_group.this",
            "module.test_stack.module.db.module.db_accessor_security_group.aws_security_group.this_name_prefix",
            "module.test_stack.module.db.module.db_security_group.aws_security_group.this",
            "module.test_stack.module.db.module.db_security_group.aws_security_group.this_name_prefix",
            "module.test_stack.module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.test_stack.module.search.module.search_accessor_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.test_stack.module.search.module.search_accessor_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:712023778557:security-group/sg-057b092de0195c491",
            "description": "For resources that need access to search cluster",
            "egress": [],
            "id": "sg-057b092de0195c491",
            "ingress": [],
            "name": "test-stack-search-accessor-20250423002621511800000008",
            "name_prefix": "test-stack-search-accessor-",
            "owner_id": "712023778557",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-stack-search-accessor"
            },
            "tags_all": {
              "Name": "test-stack-search-accessor"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-08a6cfe215aa111d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.test_stack.module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.test_stack.module.search.module.search_accessor_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Egress Rule",
            "from_port": 443,
            "id": "sgrule-1712243089",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-057b092de0195c491",
            "security_group_rule_id": "sgr-01dabe1817e4c4658",
            "self": false,
            "source_security_group_id": "sg-0a4171800b5592e57",
            "timeouts": null,
            "to_port": 443,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.test_stack.module.search.module.search_accessor_security_group.aws_security_group.this",
            "module.test_stack.module.search.module.search_accessor_security_group.aws_security_group.this_name_prefix",
            "module.test_stack.module.search.module.search_security_group.aws_security_group.this",
            "module.test_stack.module.search.module.search_security_group.aws_security_group.this_name_prefix",
            "module.test_stack.module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.test_stack.module.search.module.search_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.test_stack.module.search.module.search_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:712023778557:security-group/sg-0a4171800b5592e57",
            "description": "For search cluster resources",
            "egress": [],
            "id": "sg-0a4171800b5592e57",
            "ingress": [],
            "name": "test-stack-search-20250423002621879500000009",
            "name_prefix": "test-stack-search-",
            "owner_id": "712023778557",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-stack-search"
            },
            "tags_all": {
              "Name": "test-stack-search"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-08a6cfe215aa111d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.test_stack.module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.test_stack.module.search.module.search_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_source_security_group_id",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Ingress Rule",
            "from_port": 443,
            "id": "sgrule-2113705527",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0a4171800b5592e57",
            "security_group_rule_id": "sgr-02ffb2290680ae40c",
            "self": false,
            "source_security_group_id": "sg-057b092de0195c491",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.test_stack.module.search.module.search_accessor_security_group.aws_security_group.this",
            "module.test_stack.module.search.module.search_accessor_security_group.aws_security_group.this_name_prefix",
            "module.test_stack.module.search.module.search_security_group.aws_security_group.this",
            "module.test_stack.module.search.module.search_security_group.aws_security_group.this_name_prefix",
            "module.test_stack.module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.test_stack.module.vpc.module.api_gateway_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.test_stack.module.vpc.module.api_gateway_security_group",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:712023778557:security-group/sg-0dfa77448bfa8ca1b",
            "description": "User ingress security group for API Gateway Endpoint, Quilt load balancer",
            "egress": [],
            "id": "sg-0dfa77448bfa8ca1b",
            "ingress": [],
            "name": "test-stack-user-ingress-20250423002621281500000007",
            "name_prefix": "test-stack-user-ingress-",
            "owner_id": "712023778557",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-stack-user-ingress"
            },
            "tags_all": {
              "Name": "test-stack-user-ingress"
            },
            "timeouts": {
              "create": "10m",
              "delete": "15m"
            },
            "vpc_id": "vpc-08a6cfe215aa111d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.test_stack.module.vpc.module.vpc.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.test_stack.module.vpc.module.api_gateway_security_group",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_rules",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTPS",
            "from_port": 443,
            "id": "sgrule-2647011336",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0dfa77448bfa8ca1b",
            "security_group_rule_id": "sgr-003839800c12cd55a",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.test_stack.module.vpc.module.api_gateway_security_group.aws_security_group.this",
            "module.test_stack.module.vpc.module.api_gateway_security_group.aws_security_group.this_name_prefix",
            "module.test_stack.module.vpc.module.vpc.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "HTTP",
            "from_port": 80,
            "id": "sgrule-3431647834",
            "ipv6_cidr_blocks": [],
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-0dfa77448bfa8ca1b",
            "security_group_rule_id": "sgr-0c48cb5b5745ba17e",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.test_stack.module.vpc.module.api_gateway_security_group.aws_security_group.this",
            "module.test_stack.module.vpc.module.api_gateway_security_group.aws_security_group.this_name_prefix",
            "module.test_stack.module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.test_stack.module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:712023778557:network-acl/acl-03e9a45c813025712",
            "default_network_acl_id": "acl-03e9a45c813025712",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-03e9a45c813025712",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "712023778557",
            "subnet_ids": [
              "subnet-01f4f3ae425a408e5",
              "subnet-06f7cbe14df00ee8c",
              "subnet-0850b8f168c863fbb",
              "subnet-0b2f3f527ac76bc61",
              "subnet-0d9b23c7315330852"
            ],
            "tags": {
              "Name": "test-stack-default"
            },
            "tags_all": {
              "Name": "test-stack-default"
            },
            "vpc_id": "vpc-08a6cfe215aa111d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.test_stack.module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.test_stack.module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:712023778557:route-table/rtb-0dca290699431a6a1",
            "default_route_table_id": "rtb-0dca290699431a6a1",
            "id": "rtb-0dca290699431a6a1",
            "owner_id": "712023778557",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "test-stack-default"
            },
            "tags_all": {
              "Name": "test-stack-default"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-08a6cfe215aa111d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.test_stack.module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.test_stack.module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:712023778557:security-group/sg-0c866a5d608a24b01",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0c866a5d608a24b01",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "712023778557",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "test-stack-default"
            },
            "tags_all": {
              "Name": "test-stack-default"
            },
            "vpc_id": "vpc-08a6cfe215aa111d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.test_stack.module.vpc.module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.test_stack.module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_default_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.test_stack.module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_egress_only_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "eigw-007a5419e6f24aac3",
            "tags": {
              "Name": "test-stack"
            },
            "tags_all": {
              "Name": "test-stack"
            },
            "vpc_id": "vpc-08a6cfe215aa111d2"
          },
          "dependencies": [
            "module.test_stack.module.vpc.data.aws_availability_zones.available",
            "module.test_stack.module.vpc.module.vpc.aws_vpc.this",
            "module.test_stack.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.test_stack.module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04bcf73b1477b83a0",
            "arn": "arn:aws:ec2:us-west-2:712023778557:elastic-ip/eipalloc-04bcf73b1477b83a0",
            "domain": "vpc",
            "id": "eipalloc-04bcf73b1477b83a0",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-54-190-19-19.us-west-2.compute.amazonaws.com",
            "public_ip": "54.190.19.19",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "test-stack-us-west-2b"
            },
            "tags_all": {
              "Name": "test-stack-us-west-2b"
            },
            "vpc": true
          },
          "dependencies": [
            "module.test_stack.module.vpc.data.aws_availability_zones.available",
            "module.test_stack.module.vpc.module.vpc.aws_internet_gateway.this",
            "module.test_stack.module.vpc.module.vpc.aws_vpc.this",
            "module.test_stack.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.test_stack.module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:712023778557:internet-gateway/igw-0eb692813ce15f3a7",
            "id": "igw-0eb692813ce15f3a7",
            "owner_id": "712023778557",
            "tags": {
              "Name": "test-stack"
            },
            "tags_all": {
              "Name": "test-stack"
            },
            "vpc_id": "vpc-08a6cfe215aa111d2"
          },
          "dependencies": [
            "module.test_stack.module.vpc.data.aws_availability_zones.available",
            "module.test_stack.module.vpc.module.vpc.aws_vpc.this",
            "module.test_stack.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.test_stack.module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.test_stack.module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.test_stack.module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.test_stack.module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.test_stack.module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.test_stack.module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.test_stack.module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.test_stack.module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.test_stack.module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.test_stack.module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.test_stack.module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "database_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.test_stack.module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_ipv6_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "::/0",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "eigw-007a5419e6f24aac3",
            "gateway_id": "",
            "id": "r-rtb-0df3d3d3244e792882750132062",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0df3d3d3244e79288",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.test_stack.module.vpc.data.aws_availability_zones.available",
            "module.test_stack.module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.test_stack.module.vpc.module.vpc.aws_route_table.private",
            "module.test_stack.module.vpc.module.vpc.aws_vpc.this",
            "module.test_stack.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "::/0",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "eigw-007a5419e6f24aac3",
            "gateway_id": "",
            "id": "r-rtb-05cb3223c3341fe672750132062",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-05cb3223c3341fe67",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.test_stack.module.vpc.data.aws_availability_zones.available",
            "module.test_stack.module.vpc.module.vpc.aws_egress_only_internet_gateway.this",
            "module.test_stack.module.vpc.module.vpc.aws_route_table.private",
            "module.test_stack.module.vpc.module.vpc.aws_vpc.this",
            "module.test_stack.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.test_stack.module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.test_stack.module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0eb692813ce15f3a7",
            "id": "r-rtb-06fe5396cbb825c571080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06fe5396cbb825c57",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.test_stack.module.vpc.data.aws_availability_zones.available",
            "module.test_stack.module.vpc.module.vpc.aws_internet_gateway.this",
            "module.test_stack.module.vpc.module.vpc.aws_route_table.public",
            "module.test_stack.module.vpc.module.vpc.aws_vpc.this",
            "module.test_stack.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.test_stack.module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway_ipv6",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "",
            "destination_ipv6_cidr_block": "::/0",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0eb692813ce15f3a7",
            "id": "r-rtb-06fe5396cbb825c572750132062",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-06fe5396cbb825c57",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.test_stack.module.vpc.data.aws_availability_zones.available",
            "module.test_stack.module.vpc.module.vpc.aws_internet_gateway.this",
            "module.test_stack.module.vpc.module.vpc.aws_route_table.public",
            "module.test_stack.module.vpc.module.vpc.aws_vpc.this",
            "module.test_stack.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.test_stack.module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.test_stack.module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.test_stack.module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:712023778557:route-table/rtb-0905294eb9954fb2c",
            "id": "rtb-0905294eb9954fb2c",
            "owner_id": "712023778557",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "test-stack-intra"
            },
            "tags_all": {
              "Name": "test-stack-intra"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a6cfe215aa111d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.test_stack.module.vpc.data.aws_availability_zones.available",
            "module.test_stack.module.vpc.module.vpc.aws_vpc.this",
            "module.test_stack.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.test_stack.module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:712023778557:route-table/rtb-0df3d3d3244e79288",
            "id": "rtb-0df3d3d3244e79288",
            "owner_id": "712023778557",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "test-stack-private-us-west-2a"
            },
            "tags_all": {
              "Name": "test-stack-private-us-west-2a"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a6cfe215aa111d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.test_stack.module.vpc.data.aws_availability_zones.available",
            "module.test_stack.module.vpc.module.vpc.aws_vpc.this",
            "module.test_stack.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:712023778557:route-table/rtb-05cb3223c3341fe67",
            "id": "rtb-05cb3223c3341fe67",
            "owner_id": "712023778557",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "test-stack-private-us-west-2b"
            },
            "tags_all": {
              "Name": "test-stack-private-us-west-2b"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a6cfe215aa111d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.test_stack.module.vpc.data.aws_availability_zones.available",
            "module.test_stack.module.vpc.module.vpc.aws_vpc.this",
            "module.test_stack.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.test_stack.module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:712023778557:route-table/rtb-06fe5396cbb825c57",
            "id": "rtb-06fe5396cbb825c57",
            "owner_id": "712023778557",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "test-stack-public"
            },
            "tags_all": {
              "Name": "test-stack-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-08a6cfe215aa111d2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.test_stack.module.vpc.data.aws_availability_zones.available",
            "module.test_stack.module.vpc.module.vpc.aws_vpc.this",
            "module.test_stack.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.test_stack.module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.test_stack.module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.test_stack.module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.test_stack.module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0acc9582ba89420f7",
            "route_table_id": "rtb-0905294eb9954fb2c",
            "subnet_id": "subnet-0b2f3f527ac76bc61"
          },
          "dependencies": [
            "module.test_stack.module.vpc.data.aws_availability_zones.available",
            "module.test_stack.module.vpc.module.vpc.aws_route_table.intra",
            "module.test_stack.module.vpc.module.vpc.aws_subnet.intra",
            "module.test_stack.module.vpc.module.vpc.aws_vpc.this",
            "module.test_stack.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-023485c5a70dc3388",
            "route_table_id": "rtb-0905294eb9954fb2c",
            "subnet_id": "subnet-06f7cbe14df00ee8c"
          },
          "dependencies": [
            "module.test_stack.module.vpc.data.aws_availability_zones.available",
            "module.test_stack.module.vpc.module.vpc.aws_route_table.intra",
            "module.test_stack.module.vpc.module.vpc.aws_subnet.intra",
            "module.test_stack.module.vpc.module.vpc.aws_vpc.this",
            "module.test_stack.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.test_stack.module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1a7d33f547403e0",
            "route_table_id": "rtb-0df3d3d3244e79288",
            "subnet_id": "subnet-0850b8f168c863fbb"
          },
          "dependencies": [
            "module.test_stack.module.vpc.data.aws_availability_zones.available",
            "module.test_stack.module.vpc.module.vpc.aws_route_table.private",
            "module.test_stack.module.vpc.module.vpc.aws_subnet.private",
            "module.test_stack.module.vpc.module.vpc.aws_vpc.this",
            "module.test_stack.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04bae89e981642fea",
            "route_table_id": "rtb-05cb3223c3341fe67",
            "subnet_id": "subnet-0d9b23c7315330852"
          },
          "dependencies": [
            "module.test_stack.module.vpc.data.aws_availability_zones.available",
            "module.test_stack.module.vpc.module.vpc.aws_route_table.private",
            "module.test_stack.module.vpc.module.vpc.aws_subnet.private",
            "module.test_stack.module.vpc.module.vpc.aws_vpc.this",
            "module.test_stack.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.test_stack.module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7eb8d1f513b38ad",
            "route_table_id": "rtb-06fe5396cbb825c57",
            "subnet_id": "subnet-03e38b08477729e56"
          },
          "dependencies": [
            "module.test_stack.module.vpc.data.aws_availability_zones.available",
            "module.test_stack.module.vpc.module.vpc.aws_route_table.public",
            "module.test_stack.module.vpc.module.vpc.aws_subnet.public",
            "module.test_stack.module.vpc.module.vpc.aws_vpc.this",
            "module.test_stack.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-004aadc43aec3ea10",
            "route_table_id": "rtb-06fe5396cbb825c57",
            "subnet_id": "subnet-01f4f3ae425a408e5"
          },
          "dependencies": [
            "module.test_stack.module.vpc.data.aws_availability_zones.available",
            "module.test_stack.module.vpc.module.vpc.aws_route_table.public",
            "module.test_stack.module.vpc.module.vpc.aws_subnet.public",
            "module.test_stack.module.vpc.module.vpc.aws_vpc.this",
            "module.test_stack.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.test_stack.module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.test_stack.module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "redshift_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.test_stack.module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.test_stack.module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "elasticache",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.test_stack.module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "intra",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:712023778557:subnet/subnet-0b2f3f527ac76bc61",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.96.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": true,
            "id": "subnet-0b2f3f527ac76bc61",
            "ipv6_cidr_block": "2600:1f14:34ee:ca04::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-04e11fc3a54f7c5c7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "712023778557",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-stack-intra-us-west-2a"
            },
            "tags_all": {
              "Name": "test-stack-intra-us-west-2a"
            },
            "vpc_id": "vpc-08a6cfe215aa111d2"
          },
          "dependencies": [
            "module.test_stack.module.vpc.data.aws_availability_zones.available",
            "module.test_stack.module.vpc.module.vpc.aws_vpc.this",
            "module.test_stack.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:712023778557:subnet/subnet-06f7cbe14df00ee8c",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.224.0/20",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": true,
            "id": "subnet-06f7cbe14df00ee8c",
            "ipv6_cidr_block": "2600:1f14:34ee:ca05::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-089225e3ba974d7fd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "712023778557",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-stack-intra-us-west-2b"
            },
            "tags_all": {
              "Name": "test-stack-intra-us-west-2b"
            },
            "vpc_id": "vpc-08a6cfe215aa111d2"
          },
          "dependencies": [
            "module.test_stack.module.vpc.data.aws_availability_zones.available",
            "module.test_stack.module.vpc.module.vpc.aws_vpc.this",
            "module.test_stack.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.test_stack.module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "outpost",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.test_stack.module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:712023778557:subnet/subnet-0850b8f168c863fbb",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.0.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": true,
            "id": "subnet-0850b8f168c863fbb",
            "ipv6_cidr_block": "2600:1f14:34ee:ca02::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-08ad55c85e0a22c75",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "712023778557",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-stack-private-us-west-2a"
            },
            "tags_all": {
              "Name": "test-stack-private-us-west-2a"
            },
            "vpc_id": "vpc-08a6cfe215aa111d2"
          },
          "dependencies": [
            "module.test_stack.module.vpc.data.aws_availability_zones.available",
            "module.test_stack.module.vpc.module.vpc.aws_vpc.this",
            "module.test_stack.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:712023778557:subnet/subnet-0d9b23c7315330852",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.128.0/18",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": true,
            "id": "subnet-0d9b23c7315330852",
            "ipv6_cidr_block": "2600:1f14:34ee:ca03::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0d561f75bfe0565b1",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "712023778557",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-stack-private-us-west-2b"
            },
            "tags_all": {
              "Name": "test-stack-private-us-west-2b"
            },
            "vpc_id": "vpc-08a6cfe215aa111d2"
          },
          "dependencies": [
            "module.test_stack.module.vpc.data.aws_availability_zones.available",
            "module.test_stack.module.vpc.module.vpc.aws_vpc.this",
            "module.test_stack.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.test_stack.module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:712023778557:subnet/subnet-03e38b08477729e56",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.64.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": true,
            "id": "subnet-03e38b08477729e56",
            "ipv6_cidr_block": "2600:1f14:34ee:ca00::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0e4c03e1637f7da3a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "712023778557",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-stack-public-us-west-2a"
            },
            "tags_all": {
              "Name": "test-stack-public-us-west-2a"
            },
            "vpc_id": "vpc-08a6cfe215aa111d2"
          },
          "dependencies": [
            "module.test_stack.module.vpc.data.aws_availability_zones.available",
            "module.test_stack.module.vpc.module.vpc.aws_vpc.this",
            "module.test_stack.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:712023778557:subnet/subnet-01f4f3ae425a408e5",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.192.0/19",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": true,
            "id": "subnet-01f4f3ae425a408e5",
            "ipv6_cidr_block": "2600:1f14:34ee:ca01::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-0b58242851cade8a4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "712023778557",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "test-stack-public-us-west-2b"
            },
            "tags_all": {
              "Name": "test-stack-public-us-west-2b"
            },
            "vpc_id": "vpc-08a6cfe215aa111d2"
          },
          "dependencies": [
            "module.test_stack.module.vpc.data.aws_availability_zones.available",
            "module.test_stack.module.vpc.module.vpc.aws_vpc.this",
            "module.test_stack.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.test_stack.module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "redshift",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]"
    },
    {
      "module": "module.test_stack.module.vpc.module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:712023778557:vpc/vpc-08a6cfe215aa111d2",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03e9a45c813025712",
            "default_route_table_id": "rtb-0dca290699431a6a1",
            "default_security_group_id": "sg-0c866a5d608a24b01",
            "dhcp_options_id": "dopt-0715c47f",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-08a6cfe215aa111d2",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-04bc0ae96d481afd0",
            "ipv6_cidr_block": "2600:1f14:34ee:ca00::/56",
            "ipv6_cidr_block_network_border_group": "us-west-2",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0dca290699431a6a1",
            "owner_id": "712023778557",
            "tags": {
              "Name": "test-stack"
            },
            "tags_all": {
              "Name": "test-stack"
            }
          },
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.test_stack.module.vpc.module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": []
    },
    {
      "module": "module.test_stack.module.vpc.module.vpc_endpoints",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "s3",
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:712023778557:vpc-endpoint/vpce-032ad2a0b386b56ba",
            "cidr_blocks": [
              "3.5.76.0/22",
              "3.5.80.0/21",
              "18.34.48.0/20",
              "18.34.244.0/22",
              "52.92.128.0/17",
              "52.218.128.0/17"
            ],
            "id": "vpce-032ad2a0b386b56ba",
            "owner_id": "712023778557",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}],\"Version\":\"2008-10-17\"}",
            "prefix_list_id": "pl-68a54001",
            "private_dns_enabled": false,
            "requester_managed": false,
            "route_table_ids": [
              "rtb-05cb3223c3341fe67",
              "rtb-06fe5396cbb825c57",
              "rtb-0df3d3d3244e79288"
            ],
            "service_name": "com.amazonaws.us-west-2.s3",
            "state": "available",
            "tags": {
              "Name": "s3"
            },
            "tags_all": {
              "Name": "s3"
            },
            "timeouts": {
              "create": "10m",
              "delete": "10m",
              "update": "10m"
            },
            "vpc_endpoint_type": "Gateway",
            "vpc_id": "vpc-08a6cfe215aa111d2"
          },
          "dependencies": [
            "module.test_stack.module.vpc.data.aws_availability_zones.available",
            "module.test_stack.module.vpc.module.api_gateway_security_group.aws_security_group.this",
            "module.test_stack.module.vpc.module.api_gateway_security_group.aws_security_group.this_name_prefix",
            "module.test_stack.module.vpc.module.vpc.aws_route_table.private",
            "module.test_stack.module.vpc.module.vpc.aws_route_table.public",
            "module.test_stack.module.vpc.module.vpc.aws_subnet.private",
            "module.test_stack.module.vpc.module.vpc.aws_vpc.this",
            "module.test_stack.module.vpc.module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "module.test_stack.module.vpc.module.vpc_endpoints.aws_security_group.this",
            "module.test_stack.module.vpc.module.vpc_endpoints.data.aws_vpc_endpoint_service.this"
          ]
        }
      ]
    }
  ]
}